--- a/style/global.css
+++ b/style/global.css
@@ -5,20 +5,50 @@
   --red: #ef6461;
   --dark-red: #b84a49;
 }
-* {
-  padding: 0;
+html,
+body,
+p,
+ol,
+ul,
+li,
+dl,
+dt,
+dd,
+blockquote,
+figure,
+fieldset,
+legend,
+textarea,
+pre,
+iframe,
+hr,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
+  padding: 0;
 }
+
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+ }
+ 
+ *,
+ *::before,
+ *::after {
+  box-sizing: inherit;
+ }
+
 body {
   background-color: var(--main-bg-color);
   color: var(--black);
   font-family: "Roboto Mono", monospace;
 }
+
 .app {
-  padding: 40px 0;
+  margin: 40px 0;
 }
